--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 frozenlist==1.5.0
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 multidict==6.1.0
+packaging==25.0
 pillow==11.2.1
 propcache==0.3.0
 PyJWT==2.10.1
